# vector-db-intro

./: main.py  pyproject.toml
faiss_index_react/: index.faiss  index.pkl
mediumblogs/: mediumblog1.txt
