[tool.poetry]
name = "vector-db-intro"
version = "0.1.0"
description = ""
authors = ["Markiyan Pyts <markiyan.pyts@osf.digital>"]
readme = "README.md"
packages = [{include = "vector_db_intro"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.225"
pinecone-client = "^2.2.2"
black = "^23.3.0"
openai = "^0.27.8"
tiktoken = "^0.4.0"
pypdf = "^3.12.0"
faiss-cpu = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
